[JS] Flow - some props can be optional

--- a/src/resource/js/type.twig
+++ b/src/resource/js/type.twig
@@ -1,6 +1,6 @@
 
 type {{ operationId }}Params = {
 {% for parameter in parameters %}
-    {{ parameter.name }}: any,
+    {{ parameter.name }}{{ parameter.required ? ':' : ':?' }} any,
 {% endfor %}
 }
