--- a/src/resource/js/operation.twig
+++ b/src/resource/js/operation.twig
@@ -1,6 +1,6 @@
 {% include 'params.twig' with {'operationId': operation.operationId, 'parameters': operation.parameters} %}
 
-export function {{ operation.operationId }}(params: {{ operation.operationId }}Params, options:? FetchOptions): Promise<any> {
+export function {{ operation.operationId }}(params: {{ operation.operationId }}Params, options:? FetchOptions): Promise<{{ operation.return }}> {
 {% spaceless %}
 {% set hasPathParameters = false %}
 
