--- a/src/resource/js/params.twig
+++ b/src/resource/js/params.twig
@@ -1,6 +1,6 @@
 
 type {{ operationId }}Params = {
 {% for parameter in parameters %}
-    {{ parameter.name }}{{ parameter.required ? ':' : ':?' }} {{ flowParameterType(parameter)|raw }},
+    {{ parameter.name }}{{ parameter.required ? ':' : '?:' }} {{ flowParameterType(parameter)|raw }},
 {% endfor %}
 }
