--- a/src/resource/js/operation.twig
+++ b/src/resource/js/operation.twig
@@ -3,10 +3,14 @@
 export function {{ operation.operationId }}(params: {{ operation.operationId }}Params, options:? FetchOptions): Promise<{{ operation.return }}> {
 {% spaceless %}
 {% set hasPathParameters = false %}
+{% set hasFileParameter = false %}
 
 {% for parameter in operation.parameters %}
     {% if parameter.in == "path" %}
         {% set hasPathParameters = true %}
+    {% endif %}
+    {% if parameter.type == "file" %}
+        {% set hasFileParameter = true %}
     {% endif %}
 {% endfor %}
 {% endspaceless %}
@@ -25,5 +29,9 @@ export function {{ operation.operationId }}(params: {{ operation.operationId }}P
     const baseUrl = "{{ operation.path }}";
 {% endif %}
 
+{% if hasFileParameter %}
+    return formDataRequest(baseUrl, params, "{{ operation.method|upper }}", options);
+{% else %}
     return request(baseUrl, params, "{{ operation.method|upper }}", options);
+{% endif %}
 }
