[JS] Support API_BASE_PATH

--- a/src/resource/js/Client.twig
+++ b/src/resource/js/Client.twig
@@ -1,7 +1,6 @@
 // @flow
-/* global API_BASE_PATH */
 
-declare var API_BASE_PATH: string;
+const API_BASE_PATH: string = "{{ path }}";
 
 export type FetchOptions = {
     headers:? Object
