--- a/src/resource/js/tag.twig
+++ b/src/resource/js/tag.twig
@@ -1,6 +1,6 @@
 // @flow
 
-import { request } from './Client'
+import { request, required } from './Client'
 
 // flow types
 import type { FetchOptions } from './Client';
