[Flow] Escape field name inside parameters for Request

--- a/src/resource/js/params.twig
+++ b/src/resource/js/params.twig
@@ -2,7 +2,7 @@
 type {{ operationId }}Params = {
 {% for parameter in parameters %}
 {% if parameter.in != "path" %}
-    {{ parameter.name }}{{ parameter.required ? ':' : '?:' }} {{ flowParameterType(parameter)|raw }},
+    {{ parameter.name|flowFieldEscape|raw }}{{ parameter.required ? ':' : '?:' }} {{ flowParameterType(parameter)|raw }},
 {% endif %}
 {% endfor %}
 }
