Feature(JS): Client - rework (introduce before middleware)

--- a/src/resource/js/Client.twig
+++ b/src/resource/js/Client.twig
@@ -13,50 +13,74 @@ function buildQueryString(params: Object): string {
         .join('&');
 }
 
-export function required(key: string) {
+function required(key: string) {
     throw new Error(`Missing required parameter: ${key}`);
 }
 
-export function request(url: string, params: Object, method: string = 'GET', options?: FetchOptions) {
-    return new Promise(
-        (resolve, reject) => {
-            let requestOptions = Object.assign({}, options, { method: method});
+function makeClient() {
+    let before: Array<BeforeMiddleware> = [];
 
-            if (method == 'POST' || method == 'PUT') {
-                if (requestOptions.headers) {
-                    requestOptions.headers = Object.assign(
-                        requestOptions.headers,
-                        {
-                            "Content-Type": "application/x-www-form-urlencoded"
-                        }
-                    );
-                } else {
-                    requestOptions.headers = {
-                        "Content-Type": "application/x-www-form-urlencoded"
-                    };
-                }
+    return {
+        before: (middleware: BeforeMiddleware) => {
+            before.push(middleware);
+        },
+        request (url: string, params: Object, method: string = 'GET', options?: FetchOptions): Promise<any> {
+            let requestOptions = Object.assign({}, options, {method: method});
 
-                requestOptions = Object.assign(
-                    requestOptions,
-                    {
-                        body: buildQueryString(params)
-                    }
-                )
-            } else if (params && Object.keys(params).length > 0) { // Check that parameters exists
-                url += '?' + buildQueryString(params)
+            if (before) {
+                before.forEach((middleware) => middleware(requestOptions));
             }
 
-            fetch(API_BASE_PATH + url, requestOptions).then(
-                (response) => {
-                    if (response.status >= 200 && response.status < 300) {
-                        resolve(response.json());
-                    } else {
-                        console.log(response.text());
-                        reject(response);
+            return new Promise(
+                (resolve, reject) => {
+                    if (method == 'POST' || method == 'PUT') {
+                        if (requestOptions.headers) {
+                            requestOptions.headers = Object.assign(
+                                requestOptions.headers,
+                                {
+                                    "Content-Type": "application/x-www-form-urlencoded"
+                                }
+                            );
+                        } else {
+                            requestOptions.headers = {
+                                "Content-Type": "application/x-www-form-urlencoded"
+                            };
+                        }
+
+                        requestOptions = Object.assign(
+                            requestOptions,
+                            {
+                                body: buildQueryString(params)
+                            }
+                        )
+
+                    } else if (params && Object.keys(params).length > 0) { // Check that parameters exists
+                        url += '?' + buildQueryString(params)
                     }
-                },
-                (err) => reject(err)
+
+                    fetch(API_BASE_PATH + url, requestOptions).then(
+                        (response) => {
+                                if (response.status >= 200 && response.status < 300) {
+                                    resolve(response.json());
+                                } else {
+                                    reject(response);
+                                }
+                        },
+                        (err) => reject(err)
+                    )
+                }
             )
         }
-    )
+    };
+}
+
+const defaultClient = makeClient();
+const before = defaultClient.before;
+const request = defaultClient.request;
+
+export {
+    required,
+    makeClient,
+    before,
+    request,
 }
