--- a/src/resource/js/params.twig
+++ b/src/resource/js/params.twig
@@ -2,7 +2,11 @@
 export type {{ operationId }}Params = {
 {% for parameter in parameters %}
 {% if parameter.in != "path" and parameter.in != "body" %}
+{% if parameter.ref %}
+    {{ parameter.ref[13:]|flowFieldEscape|raw }}{{ parameter.required ? ':' : '?:' }} {{ flowParameterType(parameter)|raw }},
+{% else %}
     {{ parameter.name|flowFieldEscape|raw }}{{ parameter.required ? ':' : '?:' }} {{ flowParameterType(parameter)|raw }},
+{% endif %}
 {% endif %}
 {% endfor %}
 }
