--- a/src/resource/js/params.twig
+++ b/src/resource/js/params.twig
@@ -3,8 +3,8 @@ export type {{ operationId }}Params = {
 {% for parameter in parameters %}
 {% if parameter.in != "path" and parameter.in != "body" %}
 {% if parameter.ref %}
-{% set param = flowParameterWithRef(parameter) %}
-    {{ param.name|flowFieldEscape|raw }}{{ param.required ? ':' : '?:' }} {{ flowParameterType(parameter)|raw }},
+{% set referencedParameter = extractParameterByRef(parameter) %}
+    {{ referencedParameter.name|flowFieldEscape|raw }}{{ referencedParameter.required ? ':' : '?:' }} {{ flowParameterType(referencedParameter)|raw }},
 {% else %}
     {{ parameter.name|flowFieldEscape|raw }}{{ parameter.required ? ':' : '?:' }} {{ flowParameterType(parameter)|raw }},
 {% endif %}
