Refactoring: Introduce flowReturnType to stop notice about ->return

--- a/src/resource/js/operation.twig
+++ b/src/resource/js/operation.twig
@@ -8,6 +8,6 @@ export function {{ operation.operationId }}(
 {% endfor %}
     params: {{ operation.operationId }}Params,
     options?: FetchOptions
-): Promise<{{ operation.return }}> {
+): Promise<{{ flowReturnType(operation)|raw }}> {
     return request({{ makePath(operation) }}, params, "{{ operation.method|upper }}", options);
 }
